[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generator"
version = "1.0.0"
authors = [
  {name = "Josh Holbrook", email = "josh.holbrook@gmail.com"}
]
description = "A custom generator for my old webcomic's site"
readme = "README.md"
keywords = []
license = { text = "Apache-2.0" }
dependencies = [
  "jinja2"
]


[project.optional-dependencies]
dev = [
  "flake8",
  "flake8-black",
  "pytest",
  "black",
  "isort",
  "jupyter-console",
  "mkdocs",
  "mkdocs-bootstrap386",
  "mkdocstrings[python]",
  "tox",
  "twine",
  "validate-pyproject[all]",
]

[tool.isort]
profile = "appnexus"
known_application = "generator"

[tool.pyright]
include = ["generator", "tests"]

[tool.pytest]
addopts = "--verbose -s"
testpaths = [ "tests" ]

[tool.setuptools]
packages = [ "generator" ]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements_dev.txt"] }
